feat: add how-to-use docs for list-item

--- a/documentation/app/styles/pages/list-item.scss
+++ b/documentation/app/styles/pages/list-item.scss
@@ -22,3 +22,15 @@
   height: 52px;
   color: var(--token-color-foreground-critical-on-surface);
 }
+
+.doc-list-items-demo {
+  padding: 0;
+
+  li {
+    margin-bottom: 0.75rem;
+  }
+}
+
+.doc-list-item-demo-dropdown {
+  margin-bottom: 4rem;
+}
