Update list-item element and background-color (#27)
* feat: add surface-primary background color to list-item

* feat: change listitem element to be li

* chore: add changeset

* fix: adjust tests to expect li instead of div

--- a/toolkit/src/components/cut/list-item/index.hbs
+++ b/toolkit/src/components/cut/list-item/index.hbs
@@ -1,10 +1,14 @@
 {{!
   Copyright (c) HashiCorp, Inc.
 }}
-<div class="cut-list-item {{if (or @route @href @onClick) 'hds-surface-mid' 'hds-surface-base'}}" ...attributes>
+<li
+  class='cut-list-item hds-surface-primary
+    {{if (or @route @href @onClick) "hds-surface-mid" "hds-surface-base"}}'
+  ...attributes
+>
   {{#if (or @route @href @onClick)}}
     <Hds::Interactive
-      class="cut-list-item__content-container active"
+      class='cut-list-item__content-container active'
       @href={{this.href}}
       @isRouteExternal={{@isRouteExternal}}
       @route={{this.route}}
@@ -14,16 +18,18 @@
       {{on 'click' this.onClickAction}}
       ...attributes
     >
-      {{yield (hash Content=(component "cut/list-item/content"))}}
+      {{yield (hash Content=(component 'cut/list-item/content'))}}
     </Hds::Interactive>
 
   {{else}}
-    {{yield (hash Content=(component "cut/list-item/content"))}}
+    {{yield (hash Content=(component 'cut/list-item/content'))}}
   {{/if}}
 
   {{yield
-    (hash ActionButton=(component "hds/button" size="small")
-      ActionDropdown=(component "hds/dropdown")
-      ActionGeneric=(component "cut/list-item/action-generic")
-    )}}
-</div>
+    (hash
+      ActionButton=(component 'hds/button' size='small')
+      ActionDropdown=(component 'hds/dropdown')
+      ActionGeneric=(component 'cut/list-item/action-generic')
+    )
+  }}
+</li>
