--- a/toolkit/src/components/cut/text-with-icon/index.hbs
+++ b/toolkit/src/components/cut/text-with-icon/index.hbs
@@ -2,8 +2,8 @@
   Copyright (c) HashiCorp, Inc.
 }}
 
-<div class="cut-text-with-icon">
-  <FlightIcon @name={{@icon}} @size="16"/>
+<div class="cut-text-with-icon" ...attributes>
+  <FlightIcon @name={{@icon}} @size="16" @color={{@iconColor}}/>
   <div>{{@text}}</div>
   {{#if @connection}}
     <div class="cut-text-with-icon__connection">{{@connection}}</div>
