feat: add list-item component documentation

--- a/documentation/app/styles/app.scss
+++ b/documentation/app/styles/app.scss
@@ -50,6 +50,7 @@ h2 {
 }
 
 h3 {
+  margin-top: 2rem;
   font-size: var(--token-typography-display-300-font-size);
   font-weight: var(--token-typography-font-weight-bold);
   line-height: var(--token-typography-display-300-line-height);
