--- a/toolkit/src/components/cut/metadata/external-source/index.hbs
+++ b/toolkit/src/components/cut/metadata/external-source/index.hbs
@@ -4,6 +4,6 @@
     @text={{concat "Registered via " @externalSource}}
     @icon={{this.externalSourceIcon}}
     @iconColor="var(--token-color-hashicorp-brand)"
-    data-test-external-source={{@service.metadata.externalSource}}
+    data-test-external-source={{@externalSource}}
   />
 {{/if}}
