--- a/toolkit/src/components/cut/metadata/external-source/index.hbs
+++ b/toolkit/src/components/cut/metadata/external-source/index.hbs
@@ -1,3 +1,7 @@
+{{!
+  Copyright (c) HashiCorp, Inc.
+}}
+
 {{#if @externalSource}}
   <!-- TODO: add translation(CC-5314) -->
   <Cut::TextWithIcon
