--- a/documentation/app/styles/app.scss
+++ b/documentation/app/styles/app.scss
@@ -7,6 +7,7 @@
 @import "./components/page-header";
 @import "./components/preview-block.scss";
 @import "./components/in-page-nav.scss";
+@import "../app/components/list-item/styles";
 
 *,
 *::before,
