--- a/toolkit/src/components/cut/metadata/external-source/index.hbs
+++ b/toolkit/src/components/cut/metadata/external-source/index.hbs
@@ -5,7 +5,7 @@
 {{#if @externalSource}}
   <!-- TODO: add translation(CC-5314) -->
   <Cut::TextWithIcon
-    @text={{concat "Registered via " @externalSource}}
+    @text={{concat "Registered via " this.externalSourceText}}
     @icon={{this.externalSourceIcon}}
     @iconColor="var(--token-color-hashicorp-brand)"
     data-test-external-source={{@externalSource}}
